# project-chess

./: .gitignore  README.md  chess_engine.py  main.py  main2.py  pyproject.toml  requirements.txt  test.py  test2.py
app/: archived_chess_engine.py  archived_game.py  board.py  chess_ai.py  chess_engine.py  chess_game.py  config.json  config.py  fen.py  game.py  game2.py  game_state.py  player.py  projection_engine.py
